[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "funannotate2"
version = "26.4.22"
description = "Funannotate2: eukarytoic genome annotation pipeline"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Jon Palmer", email = "nextgenusfs@gmail.com"}
]
requires-python = ">=3.9.0,<3.14"
dependencies = [
    "natsort",
    "numpy",
    "mappy",
    "gfftk>=26.2.12",
    "buscolite>=26.2.22",
    "gapmm2>=25.8.12",
    "pyhmmer>=0.12.0",
    "pyfastx>=2.0.0",
    "requests",
    "gb-io>=0.3.2",
    "json-repair",
    "pytantan>=1.0.4",
    "psutil",
    "annorefine>=2026.2.9"
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Operating System :: Unix",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["bioinformatics", "genome", "annotation"]

[project.urls]
Homepage = "https://github.com/nextgenusfs/funannotate2"
Repository = "https://github.com/nextgenusfs/funannotate2.git"

[project.scripts]
funannotate2 = "funannotate2.__main__:main"

[tool.hatch.build]
include = [
  "funannotate2/*.py",
  "funannotate2/downloads.json",
  "funannotate2/resources/*",
  "README.md",
  "LICENSE.md"
]
exclude = [
  "tests/*",
  "local_tests/*"
]
